# omni-weather-forecast-apis

./: .gitignore  .semgrep.yml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  LICENSE  README.md  gem_diffs.sh  index.html  init_db.py  init_db.sql  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
api-reference/: index.html
cli/: index.html
configuration/: index.html
docs/: api-reference.md  cli.md  configuration.md  data-corrections.md  database.md  extending.md  future-work.md  getting-started.md  index.md  observability.md  providers.md  scheduling.md  schema.md  upgrading-to-1.0.md
docs/adr/: 0001-cli-owned-timezone-cache.md
extending/: index.html
getting-started/: index.html
prompts/: gem_compare_prompt.txt
providers/: index.html
scripts/: inspect_db.py  repair_db.py  repair_db_v2.py
search/: search_index.json
semgrep_rules/: github_actions.txt  github_actions.yml  portability.py  portability.yml  reliability.py  reliability.yml
src/omni_weather_forecast_apis/: __init__.py  __main__.py  _cli_catalog.py  _cli_discovery.py  _cli_paths.py  _cli_scheduling.py  _cli_setup.py  _cli_timezone_cache.py  _compat.py  cli.py  client.py  http_cache.py  http_recorder.py  otel.py  quota.py  rate_limiter.py  sqlite_store.py
src/omni_weather_forecast_apis/mapping/: __init__.py  conditions.py  units.py
src/omni_weather_forecast_apis/plugins/: __init__.py  _base.py  google_weather.py  met_norway.py  met_office.py  meteosource.py  nbm.py  nws.py  open_meteo.py  openweather.py  pirate_weather.py  stormglass.py  tomorrow_io.py  visual_crossing.py  weather_unlocked.py  weatherapi.py  weatherbit.py  weatherkit.py  xweather.py
src/omni_weather_forecast_apis/types/: __init__.py  _time.py  config.py  metrics.py  plugin.py  schema.py
src/omni_weather_forecast_apis/utils/: __init__.py  env_config.py  time_helpers.py  timezones.py
tests/: helpers.py  test_cli.py  test_cli_discovery.py  test_cli_formats.py  test_cli_guard.py  test_cli_routing.py  test_cli_scheduling.py  test_cli_setup.py  test_cli_timezone_cache.py  test_compat.py  test_conditions.py  test_docs_workflow.py  test_entrypoint.py  test_env_config.py  test_http_cache.py  test_http_recorder.py  test_init_db.py  test_inspect_db.py  test_mapping_conditions.py  test_mapping_units.py  test_metrics.py  test_orchestrator.py  test_otel.py  test_properties.py  test_quota.py  test_rate_limiter.py  test_repair_db.py  test_repair_db_v2.py  test_response_hooks.py  test_retry.py  test_schema.py  test_sqlite_store.py  test_time_helpers.py  test_timezones.py  test_units.py
tests/plugins/: test_base_helpers.py  test_google_weather.py  test_met_norway.py  test_met_office.py  test_meteosource.py  test_nbm.py  test_nws.py  test_open_meteo.py  test_openweather.py  test_pirate_weather.py  test_provider_parser_regressions.py  test_stormglass.py  test_tomorrow_io.py  test_visual_crossing.py  test_weather_unlocked.py  test_weatherapi.py  test_weatherbit.py  test_weatherkit.py  test_xweather.py
