[project]
name = "omni-weather-forecast-apis"
version = "0.1.0"
description = "Universal weather forecast aggregation library with a typed normalized schema."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.scripts]
omni-weather = "omni_weather_forecast_apis.cli:main"

[project.urls]
Homepage = "https://github.com/hbmartin/omni-weather-forecast-apis"
Repository = "https://github.com/hbmartin/omni-weather-forecast-apis"
Issues = "https://github.com/hbmartin/omni-weather-forecast-apis/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.3.0",
    "codecov>=2.1.13",
    "lizard>=1.21.2",
    "pyrefly>=0.55.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py314"

lint.select = ["ALL"]
lint.ignore = [
    "ANN401",
    "BLE001",
    "C901",
    "D",
    "E501",
    "EM",
    "PERF401",
    "PLR",
    "PYI034",
    "RUF001",
    "S113",
    "S608",
    "T201",
    "TC",
    "TRY",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # Type annotations not required in tests
    "D",      # Docstrings not required in tests
    "S101",   # assert is expected in tests
    "SLF001", # Private member access is fine in tests
]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
